--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,87 +1,34 @@
-<<<<<<< HEAD
 name: Build APK
 
 on:
-  workflow_dispatch: # allows manual trigger
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
-      - name: Install Cordova & Android SDK
-        run: |
-          npm install -g cordova
-          sudo apt-get update
-          sudo apt-get install -y openjdk-11-jdk wget unzip
-          wget https://dl.google.com/android/repository/commandlinetools-linux-9123335_latest.zip -O cmdline-tools.zip
-          unzip cmdline-tools.zip -d $HOME/android-sdk
-          mkdir -p $HOME/android-sdk/cmdline-tools/latest
-          mv $HOME/android-sdk/cmdline-tools/* $HOME/android-sdk/cmdline-tools/latest/
-          yes | $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager --licenses
-          $HOME/android-sdk/cmdline-tools/latest/bin/sdkmanager "platforms;android-33" "build-tools;33.0.2"
-
-      - name: Build APK
-        run: |
-          npm install
-          cordova platform add android --save || true
-          cordova build android --release
-
-      - name: Upload APK
-        uses: actions/upload-artifact@v3
-        with:
-          name: MyApp-APK
-          path: platforms/android/app/build/outputs/apk/release/app-release-unsigned.apk
-=======
-name: Build Android APK
-
-on:
-  workflow_dispatch:   # Allows manual triggering from GitHub Actions
-
-jobs:
-  build-apk:
-    name: Build APK
-    runs-on: ubuntu-latest
-
-    steps:
-      # 1. Checkout repository
-      - name: Checkout Repo
+      - name: Checkout repository
         uses: actions/checkout@v4
 
-      # 2. Set up Node.js
-      - name: Setup Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          node-version: 18
 
-      # 3. Install Cordova globally
-      - name: Install Cordova
-        run: npm install -g cordova
-
-      # 4. Install project dependencies
-      - name: Install npm dependencies
+      - name: Install dependencies
         run: npm install
 
-      # 5. Prepare Android platform
-      - name: Add Android Platform
-        run: cordova platform add android@12.1.1 || true
+      - name: Build Cordova Android
+        run: |
+          npm install -g cordova
+          cordova platform add android
+          cordova build android --release
 
-      # 6. Build the APK
-      - name: Build Android APK
-        run: cordova build android --release
-
-      # 7. Upload APK as artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: MyApp-APK
-          path: platforms/android/app/build/outputs/apk/release/app-release.apk
->>>>>>> 9a5d164 (Add APK build workflow)
+          path: platforms/android/app/build/outputs/apk/release/*.apk
