--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -2,33 +2,50 @@ name: Build APK
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
+    branches:
+      - main
+  workflow_dispatch: # Allows manual run
 
 jobs:
   build-apk:
     runs-on: ubuntu-latest
-
     steps:
+      # 1. Checkout repo without submodules
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          submodules: false
 
-      - name: Set up Node.js
+      # 2. Set up Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 20
+          node-version: '20'
 
+      # 3. Install Cordova globally
       - name: Install Cordova
         run: npm install -g cordova
 
-      - name: Build APK
+      # 4. Install project dependencies
+      - name: Install dependencies
+        working-directory: MyAppCordova
+        run: npm install
+
+      # 5. Prepare Android platform
+      - name: Add Android platform
         working-directory: MyAppCordova
         run: |
+          cordova platform rm android || true
           cordova platform add android
-          cordova build android --release
 
+      # 6. Build APK
+      - name: Build APK
+        working-directory: MyAppCordova
+        run: cordova build android --release
+
+      # 7. Upload APK artifact
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: MyApp-APK
-          path: MyAppCordova/platforms/android/app/build/outputs/apk/release/*.apk
+          path: MyAppCordova/platforms/android/app/build/outputs/apk/release/app-release.apk
