--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -7,45 +7,48 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-apk:
+  build:
+    name: Build APK
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout repository
-      - name: Checkout repo
+      # 1. Checkout the repo without submodules
+      - name: Checkout repository
         uses: actions/checkout@v4
-
-      # 2️⃣ Setup Node.js
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
         with:
-          node-version: '20'
+          submodules: false
 
-      # 3️⃣ Install Cordova globally
+      # 2. Set up Node.js (Cordova depends on Node)
+      - name: Setup Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 20
+
+      # 3. Install Cordova
       - name: Install Cordova
         run: npm install -g cordova
 
-      # 4️⃣ Navigate to your app folder
-      - name: Navigate to MyAppCordova
-        working-directory: MyAppCordova
+      # 4. Install dependencies in your folder
+      - name: Install project dependencies
         run: |
+          cd MyAppCordova
           npm install
 
-      # 5️⃣ Add Android platform (skip if already added)
+      # 5. Add Android platform if missing
       - name: Add Android platform
-        working-directory: MyAppCordova
         run: |
-          cordova platform add android || echo "Android platform already exists"
+          cd MyAppCordova
+          cordova platform add android || echo "Platform already exists"
 
-      # 6️⃣ Build the APK
+      # 6. Build the APK
       - name: Build APK
-        working-directory: MyAppCordova
         run: |
+          cd MyAppCordova
           cordova build android --release
 
-      # 7️⃣ Upload the APK as artifact
+      # 7. Upload the APK artifact
       - name: Upload APK
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4
         with:
           name: MyApp-APK
-          path: MyAppCordova/platforms/android/app/build/outputs/apk/release/*.apk
+          path: MyAppCordova/platforms/android/app/build/outputs/**/*.apk
