--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-  workflow_dispatch:
 
 jobs:
   build:
@@ -13,8 +12,17 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up Java 17
+        uses: actions/setup-java@v3
         with:
-          submodules: false
+          java-version: '17'
+          distribution: 'temurin'
+
+      - name: Set up Gradle 8.3
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 8.3
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
@@ -26,6 +34,9 @@ jobs:
 
       - name: Install dependencies
         run: npm install
+
+      - name: Remove Android platform (clean)
+        run: cordova platform rm android || true
 
       - name: Add Android platform
         run: cordova platform add android
