--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,43 +1,55 @@
-name: Build Android APK
+name: Build Android APK (produce APK artifact)
 
 on:
   push:
-    branches: [ "main" ]   # Run when you push to main branch
-  workflow_dispatch:        # Allows manual run from GitHub
+    branches: [ "main" ]
+  workflow_dispatch:
 
 jobs:
   build-apk:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      # Step 1: Checkout your repository
+      - name: Checkout repo (no submodules)
         uses: actions/checkout@v4
+        with:
+          submodules: false
 
-      - name: Set up Node.js
+      # Step 2: Setup Node.js
+      - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20"
 
+      # Step 3: Install Cordova globally
       - name: Install Cordova
         run: npm install -g cordova
 
-      - name: Install project dependencies
+      # Step 4: Install project dependencies
+      - name: Install project deps
         run: npm ci || npm install
+        working-directory: .
 
-      - name: Remove old Android platform
-        run: cordova platform rm android || true
-
-      - name: Add Android platform (Cordova-Android 10.1.2)
-        run: cordova platform add android@10.1.2
-
-      - name: Fix Gradle version (8.3)
+      # Step 5: Ensure clean Android platform
+      - name: Ensure Android platform clean
         run: |
-          echo "distributionUrl=https\\://services.gradle.org/distributions/gradle-8.3-bin.zip" > platforms/android/gradle/wrapper/gradle-wrapper.properties
+          cordova platform rm android || true
+          cordova platform add android@10.1.2
+        working-directory: .
 
-      - name: Build APK (force APK, not AAB)
+      # Step 6: Build APK (force APK, not AAB)
+      - name: Build APK
         run: cordova build android --release -- --packageType=apk
+        working-directory: .
 
-      - name: Upload APK
+      # Step 7: Show build outputs (optional, for debugging)
+      - name: Show build outputs
+        run: ls -la platforms/android/app/build/outputs || true
+        working-directory: .
+
+      # Step 8: Upload generated APK(s) as artifact
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: MyApp-APK
