--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,60 +1,98 @@
-name: Build Android APK
+name: Build Android APK (Cordova, Java 17, Gradle 8.3)
 
 on:
   push:
-    branches: [ "main" ]
+    branches: ["main"]
   workflow_dispatch:
 
 jobs:
   build-apk:
     runs-on: ubuntu-latest
+    timeout-minutes: 60
+
+    env:
+      ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
 
     steps:
-      # 1. Checkout your repo
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v4
 
-      # 2. Setup Java 17 (required for latest Android SDK tools)
       - name: Setup Java 17
         uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '17'
 
-      # 3. Setup Node.js
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '18'  # Node 18 is stable with Cordova
+          node-version: '18'
 
-      # 4. Install Cordova CLI
-      - name: Install Cordova
+      - name: Install Cordova CLI
         run: npm install -g cordova@10.1.2
 
-      # 5. Install project dependencies
       - name: Install project dependencies
         run: npm ci || npm install
         working-directory: .
 
-      # 6. Ensure Android platform is clean
-      - name: Clean and add Android platform
+      # Install Android command line tools
+      - name: Install Android SDK command-line tools
+        run: |
+          mkdir -p $ANDROID_SDK_ROOT
+          cd $ANDROID_SDK_ROOT
+          # download commandline tools (URL is stable; if it 404s check Google repo for latest)
+          wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
+          unzip -q cmdline-tools.zip -d cmdline-tools-tmp
+          mkdir -p cmdline-tools/latest
+          mv cmdline-tools-tmp/cmdline-tools/* cmdline-tools/latest/
+          rm -rf cmdline-tools.zip cmdline-tools-tmp
+          export PATH="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH"
+          # Accept licenses and install packages
+          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --install "platform-tools" "platforms;android-30" "build-tools;30.0.3"
+        shell: bash
+
+      - name: Add Android SDK tools to PATH for rest of job
+        run: |
+          echo "$ANDROID_SDK_ROOT/cmdline-tools/latest/bin" >> $GITHUB_PATH
+          echo "$ANDROID_SDK_ROOT/platform-tools" >> $GITHUB_PATH
+
+      # Ensure a clean Android platform and add the correct cordova-android
+      - name: Ensure Android platform clean
         run: |
           cordova platform rm android || true
           cordova platform add android@10.1.2
         working-directory: .
 
-      # 7. Build the APK
+      # Force Gradle wrapper to use 8.3 (fixes XmlParser / Gradle9 issues)
+      - name: Force Gradle wrapper to 8.3
+        run: |
+          mkdir -p platforms/android/gradle/wrapper
+          cat > platforms/android/gradle/wrapper/gradle-wrapper.properties <<'EOF'
+distributionBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists
+zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.3-bin.zip
+EOF
+        working-directory: .
+
+      # Download Gradle 8.3 and add to PATH (optional but avoids wrapper lookup delays)
+      - name: Download Gradle 8.3
+        run: |
+          wget -q https://services.gradle.org/distributions/gradle-8.3-bin.zip -O gradle-8.3.zip
+          unzip -q gradle-8.3.zip
+          echo "$PWD/gradle-8.3/bin" >> $GITHUB_PATH
+        shell: bash
+
       - name: Build APK (force APK, not AAB)
         run: cordova build android --release -- --packageType=apk
         working-directory: .
 
-      # 8. Show build outputs for debugging
-      - name: Show build outputs
-        run: ls -la platforms/android/app/build/outputs
+      - name: Show build outputs (debug)
+        run: ls -la platforms/android/app/build/outputs || true
         working-directory: .
 
-      # 9. Upload the generated APK(s)
-      - name: Upload generated APK
+      - name: Upload APK artifact
         uses: actions/upload-artifact@v4
         with:
           name: MyApp-APK
