--- a/package.json
+++ b/package.json
@@ -20,5 +20,13 @@
     "android"
   ],
   "author": "Web App Maker",
-  "license": "MIT"
+  "license": "MIT",
+  "cordova": {
+    "platforms": [
+      "android"
+    ]
+  },
+  "devDependencies": {
+    "cordova-android": "^10.1.2"
+  }
 }
