--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "license": "Apache-2.0",
   "cordova": {
     "platforms": [
-      "android"
+      "android",
+      "browser"
     ]
   },
   "devDependencies": {
-    "cordova-android": "^10.1.2"
+    "cordova-android": "^12.0.1",
+    "cordova-browser": "^7.0.0"
   }
 }
