--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -1,4 +1,4 @@
-name: Build Android APK (Web App Maker, Cordova, Java 17, Gradle 8.3)
+name: Build APK
 
 on:
   push:
@@ -8,88 +8,40 @@ on:
 jobs:
   build-apk:
     runs-on: ubuntu-latest
-    timeout-minutes: 60
-
     env:
-      ANDROID_SDK_ROOT: /usr/local/lib/android/sdk
+      JAVA_HOME: /usr/lib/jvm/java-17-openjdk-amd64
 
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
+
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
         with:
-          fetch-depth: 0
+          node-version: "20"
 
-      - name: Setup Java 17
-        uses: actions/setup-java@v4
+      - name: Install Java 17
+        uses: actions/setup-java@v3
         with:
-          distribution: 'temurin'
-          java-version: '17'
+          distribution: "temurin"
+          java-version: "17"
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Install Gradle
+        uses: gradle/gradle-build-action@v2
         with:
-          node-version: '18'
+          gradle-version: 8.3
 
-      - name: Install Cordova CLI
-        run: npm install -g cordova@10.1.2
+      - name: Install Cordova
+        run: npm install -g cordova
 
-      - name: Install project dependencies
-        run: npm ci || npm install
-
-      - name: Install Android SDK command-line tools
+      - name: Build APK
+        working-directory: MyAppCordova
         run: |
-          set -e
-          mkdir -p $ANDROID_SDK_ROOT
-          cd $ANDROID_SDK_ROOT
-          wget -q https://dl.google.com/android/repository/commandlinetools-linux-9477386_latest.zip -O cmdline-tools.zip
-          unzip -q cmdline-tools.zip -d cmdline-tools-tmp
-          mkdir -p cmdline-tools/latest
-          mv cmdline-tools-tmp/cmdline-tools/* cmdline-tools/latest/
-          rm -rf cmdline-tools.zip cmdline-tools-tmp
-          export PATH="$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$PATH"
-          yes | $ANDROID_SDK_ROOT/cmdline-tools/latest/bin/sdkmanager --sdk_root=$ANDROID_SDK_ROOT --install "platform-tools" "platforms;android-30" "build-tools;30.0.3"
-        shell: bash
-
-      - name: Add Android SDK tools to PATH
-        run: |
-          echo "${{ env.ANDROID_SDK_ROOT }}/cmdline-tools/latest/bin" >> $GITHUB_PATH
-          echo "${{ env.ANDROID_SDK_ROOT }}/platform-tools" >> $GITHUB_PATH
-
-      - name: Ensure Android platform clean
-        run: |
-          cordova platform rm android || true
-          cordova platform add android@10.1.2
-        shell: bash
-
-      - name: Create Gradle wrapper properties (Gradle 8.3)
-        run: |
-          mkdir -p platforms/android/gradle/wrapper
-          cat > platforms/android/gradle/wrapper/gradle-wrapper.properties <<'EOF'
-          distributionBase=GRADLE_USER_HOME
-          distributionPath=wrapper/dists
-          zipStoreBase=GRADLE_USER_HOME
-          zipStorePath=wrapper/dists
-          distributionUrl=https\://services.gradle.org/distributions/gradle-8.3-bin.zip
-          EOF
-        shell: bash
-
-      - name: Download Gradle 8.3 (optional)
-        run: |
-          wget -q https://services.gradle.org/distributions/gradle-8.3-bin.zip -O gradle-8.3.zip
-          unzip -q gradle-8.3.zip
-          echo "$PWD/gradle-8.3/bin" >> $GITHUB_PATH
-        shell: bash
-
-      - name: Build APK (release)
-        run: cordova build android --release -- --packageType=apk
-        shell: bash
-
-      - name: Show build outputs
-        run: ls -la platforms/android/app/build/outputs || true
-        shell: bash
+          cordova platform add android --no-interactive || true
+          cordova build android --release -- --no-daemon
 
       - name: Upload APK artifact
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: WebAppMaker-APK
-          path: platforms/android/app/build/outputs/**/*.apk
+          name: MyApp-release-apk
+          path: MyAppCordova/platforms/android/app/build/outputs/apk/release/*.apk
